# ROOTCuts

./: CMakeLists.txt  Christmas.cc  README.md  README.txt  ROOTEffs.cc  ROOTcuts.cc  Ulrich_parameters.txt  example.rootcuts  index.html  makefile  params.json
default/: default_parameters.txt
include/: BiasedDeltaPhi.hh  ROOTEffs.hh  TerminalPlot.hh  Ulrich_cuts.hh
src/: BiasedDeltaPhi.cc  Christmas.cc  CutsFunction.cc  CutsFunctionBkg.cc  FileExists.cc  Jet2Plus1Finder.cc  Jet2Plus1MbbFinder.cc  JetDoubleMbbPairFinder.cc  JetDoublePairFinder.cc  JetPairFinder.cc  Plotting.cc  TerminalPlot.cc  Ulrich_cuts.cc  Ulrich_cuts_bkg.cc  YieldGetter.cc  Yield_Adder.cc  alpha_T.cc
xcode/: CMakeCache.txt  cmake_install.cmake
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
xcode/Debug/: ROOTCuts
xcode/ROOTCuts.build/Debug/ALL_BUILD.build/: Script-8BB2DAEAF0704B8D82A5331E.sh  dgph  dgph~
xcode/ROOTCuts.build/Debug/ROOTCuts.build/: dgph  dgph~
xcode/ROOTCuts.build/Debug/ROOTCuts.build/Objects-normal/x86_64/: BiasedDeltaPhi.d  Christmas.d  CutsFunction.d  CutsFunction.dia  CutsFunctionBkg.d  Jet2Plus1Finder.d  Jet2Plus1MbbFinder.d  JetDoubleMbbPairFinder.d  JetDoublePairFinder.d  ROOTCuts.LinkFileList  ROOTcuts.d  ROOTcuts.dia  Ulrich_cuts.d  Ulrich_cuts.dia
xcode/ROOTCuts.build/Debug/ROOTEffs.build/: dgph  dgph~
xcode/ROOTCuts.build/Debug/ROOTEffs.build/Objects-normal/x86_64/: Plotting.d  ROOTEffs.LinkFileList  ROOTEffs.d  Yield_Adder.d  Yield_Adder.dia
xcode/ROOTCuts.build/Debug/ZERO_CHECK.build/: Script-04159449850E46DA9B08432A.sh  dgph  dgph~
xcode/ROOTCuts.xcodeproj/: project.pbxproj
xcode/ROOTCuts.xcodeproj/project.xcworkspace/xcuserdata/alex.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/ROOTCuts.xcodeproj/xcuserdata/alex.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ROOTCuts.xcscheme  ROOTEffs.xcscheme  ZERO_CHECK.xcscheme  install.xcscheme  xcschememanagement.plist
